hphp/hack/test/ifc/check/tuple_overwrite.php.exp
=== IFC analysis results for tuple_overwrite.php
File "tuple_overwrite.php", line 21, characters 3-21:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "tuple_overwrite.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "tuple_overwrite.php", line 5, characters 14-24:
  This may be the data sink with policy `PUBLIC`
  File "tuple_overwrite.php", line 20, characters 3-22:
  Another program point contributing to the illegal flow
File "tuple_overwrite.php", line 35, characters 3-21:
Data with policy `PRIVATE` appears in context `PUBLIC`. (Typing[4379])
  File "tuple_overwrite.php", line 7, characters 14-25:
  This may be the data source with policy `PRIVATE`
  File "tuple_overwrite.php", line 5, characters 14-24:
  This may be the data sink with policy `PUBLIC`
  File "tuple_overwrite.php", line 33, characters 3-39:
  Another program point contributing to the illegal flow
  File "tuple_overwrite.php", line 34, characters 3-21:
  Another program point contributing to the illegal flow
